fix(styles): adjust `top` value in MediaToggle for alignment

--- a/components/Media/MediaToggle.module.scss
+++ b/components/Media/MediaToggle.module.scss
@@ -31,7 +31,7 @@
     margin: calc(-1 * var(--padding) + 0px) calc(0.5 * var(--padding) + 0px);
     padding: 0;
     position: relative;
-    top: 0.3em;
+    top: 0.28em;
     transition: color 0.2s ease-in-out;
     user-select: none;
 
